# MediCrypt-AII

./: .gitignore  README.md  medicrypt.db
client/: README.md  __init__.py  api_client.py  client_app.py  decryptor.py  encryptor.py  key_manager.py  medical_scoring_app.py  ml_prediction_app.py  pyproject.toml
client/medicrypt_ai_client.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
client/tests/: test_dev_fhe_roundtrip.py
server/: README.md  medicrypt.db  pyproject.toml
server/app/: __init__.py  main.py
server/app/api/: deps.py
server/app/config/: constants.py  settings.py
server/app/db/: base.py  migrations.py  session.py
server/app/fhe_compute/: __init__.py  benchmarking.py  ciphertext_metadata.py  ciphertext_registry.py  circuit_config.py  concrete_backend.py  dev_backend.py  engine_interface.py  model_weights.py  serialization.py
server/app/middleware/: auth_middleware.py  correlation_id.py  error_handler.py  metrics_middleware.py  rate_limiter.py  request_logger.py  security_middleware.py
server/app/models/: audit_log.py  base.py  doctor_patient_mapping.py  encrypted_record.py  login_history.py  permission.py  prediction.py  public_evaluation_key.py  refresh_token.py  role.py  session.py  shared_medical_record.py  user.py
server/app/schemas/: audit_schemas.py  auth_schemas.py  medical_schemas.py  (+5 more)
server/docker/: Dockerfile  docker-compose.yml
server/medicrypt_ai_server.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
server/scripts/: benchmark_fhe_ops.py  init_db.py  seed_demo_data.py
server/tests/: conftest.py
(+61 files in other folders)
