[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "medicrypt-ai-client"
version = "0.1.0"
description = "Trusted-device client for the Medicrypt AI encrypted compute demo"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27",
  "cryptography>=43.0"
]

[tool.setuptools]
package-dir = {"" = "."}
