[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "medicrypt-ai-server"
version = "0.1.0"
description = "FastAPI server for the Medicrypt AI encrypted compute demo"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.8",
  "pydantic-settings>=2.4",
  "sqlalchemy>=2.0",
  "pyjwt>=2.9",
  "passlib[bcrypt]>=1.7",
  "httpx>=0.27",
  "python-multipart>=0.0.9",
  "prometheus_client>=0.16"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "pytest-cov>=5.0"
]

[tool.setuptools]
package-dir = {"" = "."}

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["."]
